changes in sbcl-0.9.3 relative to sbcl-0.9.2:
  * New feature: Experimental support for bivalent streams: streams
    opened with :element-type :default now allow character and binary
    (unsigned-byte 8) I/O
  * Support for the koi8-r external format.  (thanks to Ivan Boldyrev)
  * Bug fix: OPEN no longer fails when *PRINT-READABLY* is T. (thanks
    to Zach Beane)
  * threads
    ** added x86-64 support
    ** incompatible change: the threading api now works with thread
       objects instead of thread ids
    ** bug fix: threads are protected from signals and interruption when
       starting up or going down
    ** bug fix: a race where an exiting thread could lose its stack to gc
    ** fixed numerous gc deadlocks introduced in the pthread merge

changes in sbcl-0.9.2 relative to sbcl-0.9.1:
  * numerous signal handling fixes to increase stability
  * Support for EUC-JP external format.  (thanks to NIIMI Satoshi)
  * minor incompatible change: we now correctly canonize default
    initargs, making them be a list of (INITARG INITFORM INITFUNCTION)
    as per the MOP, rather than the historical (INITARG INITFUNCTION
    INITFORM).  (reported by Bruno Haible)
  * new feature: WITH-COMPILATION-UNIT now accepts a non-standard
    :SOURCE-PLIST option. See (DOCUMENTATION #'WITH-COMPILATION-UNIT T)
    for more information.
  * TRUENAME and PROBE-FILE now correctly resolve symlinks even if the
    pathname is a directory pathname.
  * SB-SPROF now works (more) reliably on non-GENCGC platforms.
  * dynamic space size on PPC has been increased to 768Mb. (thanks to
    Cyrus Harmon)
  * SB-MOP:ENSURE-CLASS-USING-CLASS now accepts a class as the
    :METACLASS argument in addition to a class name.  (reported by
    Bruno Haible for CMUCL, patch for CMUCL by Gerd Moellmann)
  * RESTART-CASE can now be wrapped around CALL-METHOD forms.
    (reported by Bruno Haible; patch from Gerd Moellmann)
  * bug fix: sbcl runtime can now be compiled with gcc4 (thanks to 