@@ -5,6 +5,9 @@ changes in sbcl-0.9.3 relative to sbcl-0.9.2:
   * Support for the koi8-r external format.  (thanks to Ivan Boldyrev)
   * Bug fix: OPEN no longer fails when *PRINT-READABLY* is T. (thanks
     to Zach Beane)
+  * bug fix: no more highly sporadic "couldn't check whether ~S is
+    readable" when reading a stream and an interrupt hits in the middle
+    of a select system call
   * threads
     ** added x86-64 support
     ** incompatible change: the threading api now works with thread
